--- a/src/JsonResumeSharp/JsonResumeSharp.csproj
+++ b/src/JsonResumeSharp/JsonResumeSharp.csproj
@@ -7,6 +7,8 @@
     <Nullable>enable</Nullable>
     <LangVersion>11.0</LangVersion>
     <RootNamespace>JsonResumeSharp</RootNamespace>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
+    <PreserveCompilationReferences>true</PreserveCompilationReferences>
   </PropertyGroup>
   
   <ItemGroup>
