--- a/CVForge.csproj
+++ b/CVForge.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronPdf" Version="2025.10.8" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.55.0" />
     <PackageReference Include="YamlDotNet" Version="15.1.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.57" />
   </ItemGroup>
