Rename debug config to 'Debug CVForge (PDF)'
Updated the launch configuration name from 'Debug CVForge (HTML)' to 'Debug CVForge (PDF)' in .vscode/launch.json for clarity.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
     },
 
     {
-      "name": "Debug CVForge (HTML)",
+      "name": "Debug CVForge (PDF)",
       "type": "go",
       "request": "launch",
       "mode": "auto",
