Add iterate mode debug configs for HTML and PDF
Added two new VS Code launch configurations to debug CVForge in iterate mode for both HTML and PDF output formats. These configurations help streamline testing and development workflows.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,6 +42,49 @@
     },
 
     {
+      "name": "Debug CVForge (Iterate Mode, HTML)",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/main.go",
+      "args": [
+        "-d",
+        "${workspaceFolder}/examples/example.yaml",
+        "-t",
+        "${workspaceFolder}/examples/template.html",
+        "-f",
+        "html",
+        "-o",
+        "${workspaceFolder}/output",
+        "--iterate",
+        "-v"
+      ],
+      "env": {},
+      "showLog": true
+    },
+    {
+      "name": "Debug CVForge (Iterate Mode, PDF)",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/main.go",
+      "args": [
+        "-d",
+        "${workspaceFolder}/examples/example.yaml",
+        "-t",
+        "${workspaceFolder}/examples/template.html",
+        "-f",
+        "pdf",
+        "-o",
+        "${workspaceFolder}/output",
+        "--iterate",
+        "-v"
+      ],
+      "env": {},
+      "showLog": true
+    },
+
+    {
       "name": "Debug with Custom Files",
       "type": "go",
       "request": "launch",
